--- a/modal-main.css
+++ b/modal-main.css
@@ -105,3 +105,10 @@
     border-radius: 10px;
     color: #333;
 }
+
+@media (max-width: 800px){
+	.modal-main{
+	    	width: 100%;
+		margin: 0 20px;
+	}
+}
