--- a/modal-main.css
+++ b/modal-main.css
@@ -29,6 +29,7 @@
     overflow: hidden;
     border-radius: 5px;
     width: 768px;
+    max-width: 980px;
     min-width: 500px;
     min-height: 150px;
     max-height: 80%;
@@ -71,17 +72,88 @@
     cursor: pointer;
 }
 
+/* Buttons */
+
+/* Buttons head */
+
+.modal-main header .buttons-list-head-container{
+    display: block;
+}
+
+.modal-main header .buttons-list-head-container span{
+    cursor: pointer;
+    padding: 0 10px;
+}
+
+.modal-main header .buttons-list-head-container .buttons-head-container{
+    position: absolute;
+    right: 40px;
+    top: 56px;
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 240px;
+    z-index: 1000;
+    background: #fff;
+    /* padding: 6px; */
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border: solid 1px #ddd;
+}
+
+.modal-main header .buttons-list-head-container .buttons-head-container button{
+    flex: 100%;
+    text-align: center;
+    padding: 4px 0;
+    border-bottom: solid 1px #ddd;
+    font-size: 14px;
+    font-weight: 400;
+    transition: .6s;
+    padding: 8px 14px;
+}
+
+.modal-main header .buttons-list-head-container .buttons-head-container button:nth-last-child(){
+    border-bottom: none;
+}
+
+.modal-main header .buttons-list-head-container .buttons-head-container button:hover{
+    background: #ddd;
+}
+
+.modal-main header .buttons-list-head-container .buttons-head-container.hidden-button-container{
+    display: none;
+}
+
+/* Buttons head colors */
+
+.modal-main header .buttons-list-head-container .buttons-head-container button.success{
+    color: var(--color-green);
+}
+
+.modal-main header .buttons-list-head-container .buttons-head-container button.info{
+    color: var(--color-blue);
+}
+
+.modal-main header .buttons-list-head-container .buttons-head-container button.error{
+    color: var(--color-red);
+}
+
+.modal-main header .buttons-list-head-container .buttons-head-container button.cancel{
+    color: #333;
+}
+
+/* Buttons bottom */
+
 .modal-main .buttons-container{
     padding: 10px;
     text-align: center;
 }
 
 .modal-main .buttons-container button{
-    margin: 0 4px;
+    margin: 4px 4px;
     outline: none;
     padding: 4px 8px;
     border: none;
-    border-radius: 8px;
+    border-radius: 4px;
     cursor: pointer;
 }
 
